<resources>
    <string name="app_name">Android</string>
    <string name="rv_title">RecyclerView</string>
    <string name="rv_describtion">RecyclerView</string>
    <string name="text_tab_other_title">其他</string>
    <string name="text_tab_3rd_title">第三方</string>
    <string name="text_tab_frame_title">框架</string>
    <string name="text_tab_custom_title">自定义控件</string>

    <!--EventBus-->
    <string name="eventbus_title">EventBus</string>
    <string name="eventbus_details">Android optimized event bus that simplifies communication between Activities, Fragments, Threads, Services, etc. Less code, better quality.</string>
    <string name="eb_turnto_send_activity">跳转到发送页面</string>
    <string name="eb_send_normal_event">发送普通事件</string>
    <string name="eb_send_stick_event">发送粘性事件</string>
    <string name="eb_rev_stick_event">接收粘性事件</string>
    <string name="eb_rev_info">接收消息:</string>

    <!--ButterKnife-->
    <string name="butterknife_title">ButterKnife</string>
    <string name="butterknife_details">ButterKnife是一个专注于Android系统的View注入框架,可以减少大量的findViewById以及setOnClickListener代码，可视化一键生成。</string>
    <string name="bk_textview">文本</string>
    <string name="bk_checkbutton">Check Button</string>
    <string name="bk_button">按钮</string>
    <string name="bk_cb_check_on_toast">选中</string>
    <string name="bk_cb_check_off_toast">取消选中</string>
    <string name="bk_button_click_toast">点击了按钮</string>

    <!-- Check Permission-->
    <string name="check_permission_title">Android 6.0动态检查权限</string>
    <string name="check_permission_details">获取权限/去设置中设置权限</string>
    <string name="cp_check_one_permission">获取一个权限</string>
    <string name="cp_check_onemore_permission">获取多个权限</string>
    <string name="cp_goto_setting_check_permission">去设置中设置权限</string>
    <string name="cp_refused_permission">权限拒绝</string>
    <string name="cp_required_permission_success">请求权限成功</string>
    <string name="cp_denied_required_permission">权限被拒绝,请到设置中设置权限</string>

    <!-- System Info -->
    <string name="other_sysinfo_title">System Info</string>
    <string name="other_sysinfo_details">系统信息</string>

    <!-- System Info -->
    <string name="other_systest_title">System Test</string>
    <string name="other_systest_details">App管理</string>

    <!--Bmob Frame Test-->
    <string name="frame_bmob_test_title">Bmob Test</string>
    <string name="frame_bmob_test_details">Bmob应用(增加一条数据)</string>
    <string name="frame_bmob_test_btn_upload">上传一条数据</string>
    <string name="frame_bmob_test_btn_download">从服务器获取数据</string>

    <!--Custom View Test-->
    <string name="custom_view_test_title">View 的初体验</string>
    <string name="custom_view_test_details">View 的研究</string>
    <string name="custom_view_btn_2d">2D绘图</string>
    <string name="custom_view_shape_btn">Shape</string>
    <string name="custom_view_test_shape_title">Shape</string>
    <string name="custom_view_test_shape_details">Shape的应用</string>

    <string name="custom_view_clock_title">Clock</string>
    <string name="custom_view_clock_details">自定义View Clock</string>

    <string name="custom_view_surfaceview_title">SurfaceView</string>
    <string name="custom_view_surfaceview_details">自定义SurfaceView 应用实例</string>
    <string name="custom_view_surfaceview_btn_sin">绘制正弦曲线</string>
    <string name="custom_view_surfaceview_btn_draw">画图板</string>


    <string name="custom_view_animation_title">动画</string>
    <string name="custom_view_animation_details">SVG,Vector,java实现动画</string>
    <string name="custom_view_animation_vector">Vector方式实现动画</string>
    <string name="custom_view_animation_menu">灵动菜单</string>

    <!--Custom Move View-->
    <string name="custom_view_move_title">悬浮窗</string>
    <string name="custom_view_move_detail">界面悬浮窗,随手指坐标移动,可点击</string>

    <string name="other_syserror_title">System error</string>
    <string name="other_syserror_details">一些常见错误的实例</string>
    <string name="other_syserror_btn_oom">OutOfMemory Error</string>

    <string name="frame_sql_title">SQLite实例</string>
    <string name="frame_sql_details">SQLite实例</string>
    <string name="frame_sql_btn_add">添加数据库</string>
    <string name="frame_sql_btn_update">更新数据库</string>
    <string name="frame_sql_btn_create">Create Database</string>
    <string name="frame_sql_btn_del">删除数据库</string>
    <string name="frame_sql_btn_query">查询数据库</string>

    <string name="frame_bleuart_title">BLE蓝牙通讯</string>
    <string name="frame_bleuart_details">BLE UART蓝牙通信,封装成lib</string>
    <string name="frame_bleuart_btn_scan">连接设备</string>
    <string name="frame_bleuart_btn_send">发送</string>

    <string name="frame_xml_handle_title">读写XML</string>
    <string name="frame_xml_handle_details">读写XML</string>

    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_empty">No device found</string>
    <string name="not_available">n/a</string>
    <string name="scanner_title">Select device:</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>
    <string name="devices_list_device_not_supported">Device not supported.</string>
    <string name="not_supported">The device does not have required services.</string>

    <string name="custom_seekbar_title">自定义滑动组件</string>
    <string name="custom_seedbar_details">进度条</string>
    <string name="custom_tree_view_title">自定义树形组件</string>
    <string name="custom_tree_view_details">可展开/收缩的树形结构组件</string>
    <string name="custom_pop_num_activity_title">自定义PopWindow数字键盘</string>
    <string name="custom_pop_num_activity_details">自定义PopWindow数字键盘</string>


</resources>
