<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_frame_sql_create"
        android:text="@string/frame_sql_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_frame_sql_add"
        android:text="@string/frame_sql_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_frame_sql_update"
        android:text="@string/frame_sql_btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_frame_sql_del"
        android:text="@string/frame_sql_btn_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_frame_sql_query"
        android:text="@string/frame_sql_btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_frame_sql_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
