<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bk_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:padding="10dp"
        android:text="@string/bk_textview"/>

    <CheckBox
        android:id="@+id/bk_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bk_checkbutton"
        />

    <Button
        android:id="@+id/bk_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bk_button"/>

</LinearLayout>
