<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/eb_btn_turnto_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eb_turnto_send_activity"/>
    <Button
        android:id="@+id/eb_btn_send_stick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eb_send_stick_event"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eb_rev_info"/>
    <TextView
        android:id="@+id/eb_tv_rev_info_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
