<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="#000000"
    android:orientation="horizontal" >
     <LinearLayout 
        android:id="@+id/ll_tab_frame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton 
            android:id="@+id/ib_tab_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/tab_frame_pressed"
            android:background="#00000000"/>
        <TextView 
            android:text="@string/text_tab_frame_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/ll_tab_3rd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton 
            android:id="@+id/ib_tab_3rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/tab_3rd_normal"
            android:background="#00000000"/>
        <TextView 
            android:text="@string/text_tab_3rd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/ll_tab_custom_ui"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton 
            android:id="@+id/ib_tab_custom_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/tab_custom_ui_normal"
            android:background="#00000000"/>
        <TextView 
            android:text="@string/text_tab_custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/ll_tab_other"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton 
            android:id="@+id/ib_tab_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:src="@mipmap/tab_other_normal"
            android:background="#00000000"/>
        <TextView 
            android:text="@string/text_tab_other_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"/>
    </LinearLayout>

</LinearLayout>
